[gd_scene load_steps=2 format=3 uid="uid://bckwg6cwoskox"]

[ext_resource type="Script" path="res://game/Components/PathFinding/PathFinding.gd" id="1_6p88k"]

[node name="PathFinding" type="Node2D"]
script = ExtResource("1_6p88k")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="RefreshRate" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="RefreshRate" to="." method="_on_refresh_rate_timeout"]
